--- a/cloud-provider-payment/src/main/resources/application.yaml
+++ b/cloud-provider-payment/src/main/resources/application.yaml
@@ -16,3 +16,13 @@ mybatis:
   type-aliases-package: com.alpharion.entity
   configuration:
     map-underscore-to-camel-case: true
+
+# Zipkin
+management:
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+  tracing:
+    sampling:
+      # 采样率，值为0-1之间，1表示全部采集
+      probability: 1.0
