--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>cloud-consumer-order</module>
         <module>cloud-common</module>
         <module>cloud-consumer-feign-order</module>
+        <module>cloud-gateway</module>
     </modules>
 
     <properties>
