SpringCloud Gateway: 过滤器(自定义全局)

--- a/cloud-gateway/pom.xml
+++ b/cloud-gateway/pom.xml
@@ -47,6 +47,10 @@
             <version>${netty-resolver-dns-native-macos.version}</version>
             <classifier>osx-aarch_64</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
