SpringCloud Gateway: 过滤器(自定义条件)

--- a/cloud-gateway/src/main/resources/bootstrap.yaml
+++ b/cloud-gateway/src/main/resources/bootstrap.yaml
@@ -56,3 +56,4 @@ spring:
             - AddRequestHeader=X-Request-Miracle2, miracle2
             # 移除请求头中的一个值
             - RemoveRequestHeader=X-Request-Miracle1
+            - MustExistParam=status
