--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>cloud-gateway</module>
         <module>cloud-alibaba-provider-payment</module>
         <module>cloud-alibaba-consumer-nacos-order</module>
+        <module>cloud-alibaba-config-nacos-client</module>
     </modules>
 
     <properties>
